--- a/_posts/2023-05-27-remix.md
+++ b/_posts/2023-05-27-remix.md
@@ -5,7 +5,7 @@ Whenever I want to throw myself into a new framework or language, I find the tut
 
 ## Coming up with a project
 This year will be my 10th time attending Glastonbury Festival, which is very much a calendar highlight for me. In 2014 I made a "Glasto 2014" app in AngularJs which took the lineup and allowed you to save the acts you wanted to see, and then let you know what your next highlight is.
-![[2014-06-30 10.12.19.png]]
+![The original Glasto 2014 AngularJs app](2014-06-30-10.12.19.png)
 Glastonbury is quite a unique festival in that it's absolutely HUGE, and has over 100 stages, so if you want to see something, you need a plan. Often you find yourself just wandering (which is a great plan in itself), and you might stumble across an act and want to know who it is.
 
 This app solved both of these problems (and a couple of other use cases) with the full lineup, the option to view by stage, a map etc.
@@ -17,8 +17,8 @@ With a non-commercial or prototype project in mind, we have a bit of flexibility
 
 [Remix's official site](https://remix.run/) has a short and a long tutorial - nice! There's a [short 'blog' tutorial](https://remix.run/docs/en/main/tutorials/blog), and a [longer 'remix-jokes' tutorial](https://remix.run/docs/en/main/tutorials/jokes). As we're offering up information to users initially, rather than providing a way to input information, the longer tutorial fits the project better, and so that's where we begin.
 
-I followed the tutorial reasonably closely, but instead of creating routes for jokes, I created routes for 'acts' and 'stages':
-![[Screenshot 2023-05-27 at 08.21.48.png]]
+I followed the tutorial reasonably closely, but instead of creating routes for jokes, I created routes for 'acts' and 'stages' - you'll see the method for describing routes is prescriptive, but logical:
+![file structure](Screenshot-2023-05-27-at-08.21.48.png)
 
 I also had to dig into Prisma a little to setup a relationship between the acts and stages (stages have multiple acts)
 
@@ -93,7 +93,7 @@ Then in a separate terminal tab from your dev process:
 ## Deviating from the tutorial
 At some point, you'll find the tutorial has served it's purpose - you're fully immersed in your own project and searching for specific solutions to your own problems, rather than following the instructions. This occurred for me around half way through the tutorial. I'd got a list of stages and associated acts seeded to my database, and I wanted to get the initial prototype lineup list pushed to a live server, so features could be added in a more Agile-compatible way (always launch your app early, functionality gaps can be plugged later but if you don't launch it early you risk never launching at all - trust me on this!).
 
-![[Screenshot 2023-05-27 at 08.51.18.png]]
+![A list of stages in the app](Screenshot-2023-05-27-at-08.51.18.png)
 
 ## Deploying the app
 I decided to try the service Remix seems to recommend for deploying: [Fly.io](https://fly.io). I expected this to work out of the box, but instead I spent far too long trying to follow the help articles for deploying and hitting various snags before I gave in and tried a different route: Remix Stacks.
