--- a/_posts/2023-05-27-remix.md
+++ b/_posts/2023-05-27-remix.md
@@ -107,7 +107,7 @@ Thankfully, the deployment worked first time, so I ported my code over to the ne
 The new Stack also came with some Cypress testing and type checking for Typescript as part of the build steps, the latter of which I had to do a little work to get to pass (my input data source for the stage lineup doesn't exactly match my database schema, so I had to create some interim interfaces to ensure all formats match what is expected).
 
 ## Wrapping up
-So, there we have it! I have a live [Glasto 2023 Lineup app](https://glasto-blues.fly.dev/), and I'm going to continue to add functionality to bring it up to par with the old app (and hopefully surpass it eventually).
+So, there we have it! I launched my Glasto 2023 Lineup app in time for the festival. I've turned off the live site now (until next year).
 
 You can [check the code out for yourself](https://github.com/Rillus/glasto-blues), if you should wish. Now we have the base in, I may try to document some of the other features as I create them, as I don't feel all use cases have been explored in the docs yet.
 
