--- a/_posts/2024-10-30-DSF2024-Ocado.md
+++ b/_posts/2024-10-30-DSF2024-Ocado.md
@@ -1,7 +1,8 @@
 # Ocado: Fail fast, Learn Faster
 **Myrna Macgregor, [Data Science Festival Oktoberfest 2024](/2024/10/30/Data-Science-Festival-Oktoberfest.html)**
-****
-Ocado's Myrna Macgregor shared their philosophy of “**Fail Fast, Learn Faster**”, focusing on their approach to e-commerce, supply chain management, fulfilment, and delivery. Here's my personal and opinionated takeaways from the talk:
+
+
+Ocado's Myrna Macgregor shared their philosophy of “**Fail Fast, Learn Faster**”, focusing on their approach to e-commerce, supply chain management, fulfilment, and delivery. Here's my personal takeaways from the talk:
 ## What makes Ocado E-commerce Innovative?
 - **Extensive Product Range:** Ocado boasts an inventory of **50,000 products**, catering to a diverse customer base, and handling supply and logistics for multiple supermarkets.
 - **Market positioning:** Ocado think of themselves primarily as a **technology company**, which helps guide their thinking and innovation.
